--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-<body>
-background-color: #fff;
-</body>
+.body{
+background-color: red;
+}
+
+.h1{
+ text-align: center;
+ background-color: yellow;
+}
