--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
     text-transform: uppercase;
 }
 
+.menu {
+border-bottom: 1px solid #f0f0f0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
 button {
     border: 0px;
     background-color: #fff;
