--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ div {
     display: block;
 }
 
+
+
 .header__top-menu {
 	display:inline-block;
 }
@@ -16,3 +18,6 @@ div {
 	display:inline-block;
 }
 
+.header__logo {
+	margin: 0 0 0 0;
+}
