--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,8 @@ div {
 
 .iphone__image {
 
+    width: 100%;
+    height: 100%
 	background-image: url(https://yadi.sk/i/JKV42wC73NpSvD);
 }
     
