--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,8 @@ div {
     border: 0px;
 }
 
-.big-img {
-
-    background-image: url(img/iphone2.png);
+.iphone {
+    width:1000px;
+    height: 500px;
+    background-image: url(img/Placeholder);
 }
