--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ div {
 }
 
 .iphone {
-    width:1000px;
+    width:100%;
     height: 500px;
-    background-image: url(img/Placeholder);
+    background-image: url(https://yadi.sk/i/yS3ajpsF3Nsz9L);
 }
