--- a/css/style.css
+++ b/css/style.css
@@ -136,5 +136,5 @@ div {
 .iphone {
     width:100%;
     height: 500px;
-    background-image: url(img/Placeholder);
+    background-image: url(/img/Placeholder.png);
 }
