--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,44 @@ div {
     height: 500px;
     background-image: url(/img/Placeholder.png);
 }
+
+
+.iphone__description {
+    margin: 103px 175px 98px 108px;
+    vertical-align: top;
+}
+
+.iphone__description__title {
+    font-size: 42px;
+    color: #fff;
+    font-family: 'Montserrat';
+    font-weight: 900;
+}
+
+.iphone__description__title h1 {
+
+    font-size: 42px;
+    color: #fff;
+    font-family: 'Montserrat';
+    font-weight: 900;
+}
+
+.iphone__description__title p {
+
+    font-family: 'Crimson Text', serif;
+    color: #fff;
+    font-size: 16px;
+    margin-bottom: 77px;
+    margin-top: 52px;
+}
+
+
+.iphone__description__title__button__link{
+    background-color: #2754eb;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 21px;
+    padding: 10px 41px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
