--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,9 @@ div {
     margin-right: 20vw;
     vertical-align: middle;
     margin-top: -4px;
-    text-decoration: none;
-    display:inline-block;
+    border-left: 1px solid #f0f2f7;
+    border-right: 1px solid #f0f2f7;
+    display: inline-block;
 }
 
 .second-menu__list_right_gray:nth-child(1) {
@@ -130,7 +131,8 @@ div {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     color: gray;
-    border: 0px;
+    border: none;
+    font-size: 14px;
 }
 
 .iphone {
@@ -141,7 +143,7 @@ div {
 
 
 .iphone__description {
-    margin: 103px 175px 98px 108px;
+    padding: 50px 0px 0px 100px;
     vertical-align: top;
 }
 
@@ -165,7 +167,7 @@ div {
     font-family: 'Crimson Text', serif;
     color: #fff;
     font-size: 16px;
-    margin-bottom: 77px;
+    margin-bottom: 50px;
     margin-top: 52px;
 }
 
