--- a/lesson9/less/style.less
+++ b/lesson9/less/style.less
@@ -60,10 +60,10 @@ header{
 		height: 11rem;
 		box-shadow: 0px 0px 10px rgba(0,0,0,.3);
 	}
-	&-logo{
+	&-logos{
 		height: 100%;
 		line-height: 11rem;
-		img{
+		image{
 			vertical-align: middle;
 		}
 		span{
