--- a/lesson9/less/style.less
+++ b/lesson9/less/style.less
@@ -73,7 +73,7 @@ header{
 			vertical-align: middle;
 		}
 	}
-	&-nav{
+	&-top-nav{
 		border-right: 1px solid @line-color;
 		-webkit-margin-before: 0em;
     	-webkit-margin-after: 0em;
@@ -92,7 +92,7 @@ header{
 					color: @light-color;	
 				}
 			}
-			&.item-active a{
+			&.link-active a{
 				.bold;
 				color: @light-color;
 			}
@@ -100,8 +100,8 @@ header{
 			margin: 0 1rem;
 		}
 	}
-	&-callback{
-		&_text{
+	&-call{
+		&_txt{
 			p{
 				padding-top: 1rem;
 				font-size: 1.2rem;
@@ -121,7 +121,7 @@ header{
 				color: @dark-color;
 			}
 		}
-		&_phone{
+		&_number{
 			font-size: 2.4rem;
 			font-weight: bold;
 			padding-left: 2rem;
@@ -149,7 +149,7 @@ header{
 			.reg;
 		}
 	}
-	&-main-img{
+	&-main-image{
 		margin-top: 2rem;
 	}
 }
