--- a/lesson9/css/style.css
+++ b/lesson9/css/style.css
@@ -60,7 +60,7 @@ header {
   margin-left: 1rem;
   vertical-align: middle;
 }
-.header-nav {
+.header--top-nav {
   border-right: 1px solid rgba(164, 164, 164, 0.1);
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
@@ -68,38 +68,38 @@ header {
   height: 11rem;
   line-height: 11rem;
 }
-.header-nav li {
+.header-top-nav li {
   display: inline-block;
   margin: 0 1rem;
 }
-.header-nav li a {
+.header-top-nav li a {
   font-size: 1.6rem;
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   color: #202242;
 }
-.header-nav li a:hover {
+.header-top-nav li a:hover {
   text-decoration: none;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   color: #ffe13e;
 }
-.header-nav li.item-active a {
+.header-top-nav li.item-active a {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   color: #ffe13e;
 }
-.header-callback {
+.header-call {
   text-align: center;
 }
-.header-callback_text p {
+.header-call_txt p {
   padding-top: 1rem;
   font-size: 1.2rem;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
 }
-.header-callback_btn {
+.header-call_btn {
   display: inline-block;
   padding: 1rem 2rem;
   margin-right: 4rem;
@@ -108,19 +108,19 @@ header {
   background-color: #ffe13e;
   color: #202242;
 }
-.header-callback_btn:hover {
+.header-call_btn:hover {
   text-decoration: none;
   background-color: rgba(255, 225, 62, 0.7);
   color: #202242;
 }
-.header-callback_phone {
+.header-call_number {
   font-size: 2.4rem;
   font-weight: bold;
   padding-left: 2rem;
   color: #202242;
   border-left: 2px solid rgba(164, 164, 164, 0.1);
 }
-.header-callback_phone:hover {
+.header-call_number:hover {
   text-decoration: none;
   color: #ffe13e;
 }
@@ -141,7 +141,7 @@ header {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
 }
-.header-main-img {
+.header-main-image {
   margin-top: 2rem;
 }
 .main-form-block {
