--- a/lesson9/css/style.css
+++ b/lesson9/css/style.css
@@ -37,7 +37,7 @@ body {
 header {
   height: 100vh;
   min-height: 60rem;
-  background: url(../img/bg_1.jpg) no-repeat center center;
+  background: url(../img/main.png) no-repeat center center;
   background-size: cover;
 }
 .header-top-block {
