--- a/lesson9/less/style.less
+++ b/lesson9/less/style.less
@@ -50,7 +50,7 @@ body{
 header{
 	height: 100vh;
 	min-height: 60rem;
-	background: url(../img/bg_1.jpg) no-repeat center center;
+	background: url(../img/main.png) no-repeat center center;
 	background-size: cover;
 
 }
