--- a/lesson9/css/style.css
+++ b/lesson9/css/style.css
@@ -60,7 +60,7 @@ header {
   margin-left: 1rem;
   vertical-align: middle;
 }
-.header--top-nav {
+.header-top-nav {
   border-right: 1px solid rgba(164, 164, 164, 0.1);
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
