--- a/lesson10/css/style.css
+++ b/lesson10/css/style.css
@@ -8,3 +8,8 @@ body{
     padding-top: 4rem;
     color: white;
 }
+
+.fa {
+	display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+}
