--- a/lesson10/css/style.css
+++ b/lesson10/css/style.css
@@ -14,9 +14,9 @@ body{
     font: normal normal normal 14px/1 FontAwesome;
 }
 
-.h2 work {
-	font-size: 50px;
-}
+.work h2 {
+	color: #000;
+    font-size: 50px;}
 
 .work {
 	text-align: center;
