--- a/lesson10/css/style.css
+++ b/lesson10/css/style.css
@@ -24,18 +24,18 @@ body{
 	color: #fc6744
 }
 
-.box one {
+.box-one {
 	background-color: #4eb2f7;
 }
 
-.box second {
+.box-second {
     background-color: #c049f8; 
 }
 
-.box three {
+.box-three {
     background-color: #817eff;
 }
 
-.box forth {
+.box-forth {
     background-color: #f74770;
 }
