--- a/lesson10/css/style.css
+++ b/lesson10/css/style.css
@@ -19,6 +19,11 @@ i.fa {
     font-size: 50px;
 }
 
+i.fa-plus {
+    padding-right: 20px;
+    color: rgba(0, 0, 0,.5);
+}
+
 .work h2 {
 	color: #000;
     font-size: 50px;}
