--- a/lesson10/css/style.css
+++ b/lesson10/css/style.css
@@ -10,6 +10,20 @@ body{
     height: 300px;
 }
 
+.box a {
+
+	position: relative;
+    top: 11px;
+    text-decoration: none;
+    font-size: 17px;
+    background-color: #fff;
+    padding: 10px 55px;
+    border-radius: 23px;
+    color: #000;
+    -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
 .fa {
 	display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
@@ -22,6 +36,7 @@ i.fa {
 i.fa-plus {
     padding-right: 20px;
     color: rgba(0, 0, 0,.5);
+    font-size: 20px;
 }
 
 .work h2 {
