--- a/flex/css/style.css
+++ b/flex/css/style.css
@@ -9,6 +9,11 @@ body {
     color: #fff;
 }
 
+.image span {
+	font-size: 40px;
+    text-shadow: 13px 15px 10px #000;
+}
+
 .slider {
 	display: flex;
 	align-items: center;
@@ -25,40 +30,55 @@ body {
 	border: 1px solid black;
 	background-color: grey;
 	transition: all 0.2s;
+	box-shadow: -2px 0 11px 2px black;
 }
 
 .image:hover {
 	flex-basis: 100%;
-}
-
-.image:nth-child(1) {
-	background-image: url(../img/one.png);
+	transition: all 0.2s;
 }
 
 .image-1 {
-	background-color: #000;
-    position: relative;
-    /* -webkit-transition: 0.3s; */
-    transition: 0.3s;
-    -ms-flex-preferred-size: 25%;
-    flex-basis: 25%;
-    height: 100vh;
-    /* opacity: 0.8; */
+    
+    background-image: url(../img/car.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
+
 }
 
 .image-2 {
-	background-image: url(../img/two.png);
+	background-image: url(../img/image2.jpg);
 	background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center center;
 }
 
 .image-3 {
-	background-image: url(../img/three.png);
+	background-image: url(../img/image3.jpg);
 	background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center center;
 }
 
 .image-4 {
-	background-image: url(../img/forth.png);
+	background-image: url(../img/image4.jpg);
 	background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center center;
 }
 
+@media (max-width: 640px) {
+	.slider {
+		flex-flow: column;
+		height: 100vh;
+	}
+
+	.image {
+       width: 100%;
+	}
+
+	.image:hover {
+		flex-grow: 30%;
+	}
+}
