--- a/jquery/css/style.css
+++ b/jquery/css/style.css
@@ -1,49 +1,105 @@
-.menu-link {
-   display: block;
-   width: 50px;
-   height: 50px;
-   background-color: #fff;
-   border-radius: 50%;
-   box-shadow: 1px 1px 10px rgba(0,0,0,.4);
-   position: fixed;
-   top: 20px;
-   left: 20px;
+.menu {
+  position: fixed;
+  display: flex;
+  height: 100vh;
+  width: 20vw;
+  left: -100vw;
+  transition: all .4s;
+  background-color: #484f5a;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.95;
 }
-
-.menu-link span, span:before, span:after {
+.menu-active {
+  left: 0;
+}
+.main-menu {
+  z-index: 10;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+.main-menu span,
+.main-menu span:before,
+.main-menu span:after {
   display: block;
   height: 2px;
   width: 18px;
+  background-color: #333;
   position: absolute;
   left: 50%;
   margin-left: -9px;
   top: 50%;
   margin-top: -1px;
-  background-color: #333;
 }
-
-.menu-link span:before {
-   transition: all 0.2s; 
-   content: "";
-   margin-top: -6px;
+.main-menu span:before {
+  transition: all .2s;
+  content: '';
+  margin-top: -6px;
 }
-
-.menu-link span:after {
-  transition: all 0.2s;
-  content: "";
+.main-menu span:after {
+  transition: all .2s;
+  content: '';
   margin-top: 4px;
 }
-
-.menu-link_active span {
-   background-color: transparent;
+.main-menu_active span {
+  height: 0;
+  /*background-color: transparent;*/
+}
+.main-menu_active span:before {
+  transform: rotate(135deg);
+  margin-top: -1px;
+}
+.main-menu_active span:after {
+  transform: rotate(-135deg);
+  margin-top: -1px;
+}
+.menu ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  width: 100%;
+}
+.menu a {
+  line-height: 4;
+  font-weight: 100;
+  letter-spacing: 5px;
+  display: block;
+  color: #fff;
+  transition: all .2s;
+}
+.menu a:hover {
+  width: 20vw;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: black;
 }
 
-.menu-link_active span:before {
-  transform: rotate(45deg);
-  margin-top: 0;
+.one {
+  height: 750px;
+  width: 100vw;
+  background-image: url(../img/menu.jpg);
+  background-repeat: no-repeat;
 }
 
-.menu-link_active span:after {
-  transform: rotate(-45deg);
-  margin-top: 0;
+.two {
+  height: 750px;
+  width: 100vw;
+  background-image: url(../img/action.jpg);
+  background-repeat: no-repeat;
 }
+
+.three {
+  height: 750px;
+  width: 100vw;
+  background-image: url(../img/cafe.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
