--- a/jquery/css/style.css
+++ b/jquery/css/style.css
@@ -84,14 +84,14 @@
 .one {
   height: 750px;
   width: 100vw;
-  background-image: url(../img/menu.jpg);
+  background-image: url(/../img/menu.jpg);
   background-repeat: no-repeat;
 }
 
 .two {
   height: 750px;
   width: 100vw;
-  background-image: url(../img/action.jpg);
+  background-image: url(/img/action.jpg);
   background-repeat: no-repeat;
 }
 
