--- a/flex/css/style.css
+++ b/flex/css/style.css
@@ -1,84 +1,105 @@
-* {
-	box-sizing: border-box;
+.menu {
+  position: fixed;
+  display: flex;
+  height: 100vh;
+  width: 20vw;
+  left: -100vw;
+  transition: all .4s;
+  background-color: #484f5a;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.95;
+}
+.menu-active {
+  left: 0;
+}
+.main-menu {
+  z-index: 10;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+.main-menu span,
+.main-menu span:before,
+.main-menu span:after {
+  display: block;
+  height: 2px;
+  width: 18px;
+  background-color: #333;
+  position: absolute;
+  left: 50%;
+  margin-left: -9px;
+  top: 50%;
+  margin-top: -1px;
+}
+.main-menu span:before {
+  transition: all .2s;
+  content: '';
+  margin-top: -6px;
+}
+.main-menu span:after {
+  transition: all .2s;
+  content: '';
+  margin-top: 4px;
+}
+.main-menu_active span {
+  height: 0;
+  /*background-color: transparent;*/
+}
+.main-menu_active span:before {
+  transform: rotate(135deg);
+  margin-top: -1px;
+}
+.main-menu_active span:after {
+  transform: rotate(-135deg);
+  margin-top: -1px;
+}
+.menu ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  width: 100%;
+}
+.menu a {
+  line-height: 4;
+  font-weight: 100;
+  letter-spacing: 5px;
+  display: block;
+  color: #fff;
+  transition: all .2s;
+}
+.menu a:hover {
+  width: 20vw;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: black;
 }
 
-body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Bad Script', sans-serif;
-    color: #fff;
+.one {
+  height: 750px;
+  width: 100vw;
+  background-image: url(/../img/menu.jpg);
+  background-repeat: no-repeat;
 }
 
-.image span {
-	font-size: 40px;
-    text-shadow: 13px 15px 10px #000;
+.two {
+  height: 750px;
+  width: 100vw;
+  background-image: url(/img/action.jpg);
+  background-repeat: no-repeat;
 }
 
-.slider {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 0;
+.three {
+  height: 750px;
+  width: 100vw;
+  background-image: url(../img/cafe.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.image {
-	display: flex;
-	flex-basis: 25%;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	border: 1px solid black;
-	background-color: grey;
-	transition: all 0.2s;
-	box-shadow: -2px 0 11px 2px black;
-}
-
-.image:hover {
-	flex-basis: 100%;
-	transition: all 0.2s;
-}
-
-.image-1 {
-    
-    background-image: url(../img/car.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-
-}
-
-.image-2 {
-	background-image: url(../img/image2.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-    background-position: center center;
-}
-
-.image-3 {
-	background-image: url(../img/image3.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-    background-position: center center;
-}
-
-.image-4 {
-	background-image: url(../img/image4.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-    background-position: center center;
-}
-
-@media (max-width: 640px) {
-	.slider {
-		flex-flow: column;
-		height: 100vh;
-	}
-
-	.image {
-       width: 100%;
-	}
-
-	.image:hover {
-		flex-grow: 30%;
-	}
-}
