--- a/adaptive/css/style.css
+++ b/adaptive/css/style.css
@@ -280,3 +280,96 @@ header {
 		padding: 20px 1rem 20px 10rem;
 	}
 }
+
+.menu-btn {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: black;
+  box-shadow: 1px 1px 11px grey;
+  margin: 20px 0px 0px 26px;
+  position: fixed;
+
+}
+
+.menu-btn span,
+.menu-btn span:before,
+.menu-btn span:after {
+  display: block;
+  height: 2px;
+  width: 18px;
+  background-color: #333;
+  position: absolute;
+  background-color: red;
+  margin-left:16px;
+  margin-top: 25px;
+}
+
+.menu-btn span:before {
+  transition: all .2s;
+  content: '';
+  margin-top: -6px;
+  margin-left: 0px;
+
+}
+.menu-btn span:after {
+  transition: all .2s;
+  content: '';
+  margin-top: 6px;
+  margin-left: 0px;
+}
+
+.menu-btn_active span {
+  height:0px;
+}
+
+.menu-btn_active span:before {
+  transition: all 0.2s;
+  transform: rotate(135deg);
+  margin-top: -1px;
+}
+
+.menu-btn_active span:after {
+  transition: all 0.2s;
+  transform: rotate(-135deg);
+  margin-top: -1px;
+}
+
+.menu {
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  text-align: center;
+  display: none;
+  transition: all 4s;
+  transition: translateY(100%);
+  position: fixed;
+
+}
+
+.menu li {
+  display: inline-block;
+      margin: 32px 37px 1px 0px;
+}
+
+.menu ul {
+  margin: 0;
+}
+
+.menu a {
+  color: white;
+  font-size: 17px;
+}
+
+.menu-active {
+
+  transition; all 4s;
+  display: block;
+  transition: translateY(-100%);
+
+}
+
+.header-two {
+  margin-top: 100px;
+}
