--- a/lessons20/css/style.css
+++ b/lessons20/css/style.css
@@ -1,108 +1,1 @@
-body {
-  background-color: #fff;
-  color: #a69999;
-}
-header {
-  text-align: center;
-  padding-top: 8%;
-}
-
-.content {
-    text-align: center;
-}
-
-.main {
-  color: #fff;
-}
-.main-text {
-  letter-spacing: 2px;
-}
-.main-text .p-1 {
-  text-transform: uppercase;
-  font-size: 18px;
-}
-.main-text h1 {
-  font-size: 56px;
-  margin-bottom: 3rem;
-}
-.main-text p {
-  font-size: 16px;
-  margin-bottom: 4rem;
-}
-.main-img {
-  margin-bottom: 5rem;
-}
-.main-form {
-  margin-bottom: 3rem;
-}
-.main-form input {
-  padding: 11px;
-}
-.main-form button {
-  background-color: #1abc9c;
-  border: none;
-  padding: 12px 50px;
-}
-.main-text_form {
-  font-size: 16px;
-}
-.main-text_form a {
-  color: #1abc9c;
-  text-decoration: none;
-}
-.nav {
-  padding: 3rem 0 3rem 0;
-  margin: 0 -10rem 0 -10rem;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.nav_item li {
-  display: inline-block;
-  margin-left: 3rem;
-  float: left;
-}
-.nav_item li a {
-  color: #a69999;
-  text-decoration: none;
-  text-transform: uppercase;
-  vertical-align: middle;
-}
-.nav_item li a:hover {
-  color: #1abc9c;
-}
-.nav img {
-  margin-left: 2rem;
-}
-.whatwedo {
-  margin-top: 9rem;
-}
-.whatwedo img {
-  margin-bottom: 7rem;
-}
-.whatwedo p {
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-size: 15px;
-}
-.whatwedo h2 {
-  font-size: 61px;
-  letter-spacing: 2px;
-}
-.whatwedo h2 span {
-  color: #1abc9c;
-}
-.whatwedo-box {
-  margin-bottom: 5rem;
-  margin-top: 6rem;
-}
-.whatwedo-box img {
-  margin-bottom: 5rem;
-}
-.whatwedo-box h4 {
-  margin-bottom: 3rem;
-}
-
-.parallax-window {
-  min-height: 400px;
-  background: transparent;
-}
+body{background-color:#fff;color:#a69999;}header{text-align:center;padding-top:8%;}.content{text-align:center;}.main{color:#fff;}.main-text{letter-spacing:2px;}.main-text .p-1{text-transform:uppercase;font-size:18px;}.main-text h1{font-size:56px;margin-bottom:3rem;}.main-text p{font-size:16px;margin-bottom:4rem;}.main-form input{padding:11px;}.main-form button{background-color:#1abc9c;border:none;padding:12px 50px;}.main-text_form{font-size:16px;}.main-text_form a{color:#1abc9c;text-decoration:none;}.nav{-webkit-box-shadow:0 0 10px rgba(0,0,0,0.5);box-shadow:0 0 10px rgba(0,0,0,0.5);margin:0 -10rem;padding:3rem 0;}.nav_item li{display:inline-block;margin-left:3rem;float:left;}.nav_item li a{color:#a69999;text-decoration:none;text-transform:uppercase;vertical-align:middle;}.nav img{margin-left:2rem;}.whatwedo{margin-top:9rem;}.whatwedo img{margin-bottom:7rem;}.whatwedo p{text-transform:uppercase;letter-spacing:3px;font-size:15px;}.whatwedo h2{font-size:61px;letter-spacing:2px;}.whatwedo-box{margin-bottom:5rem;margin-top:6rem;}.parallax-window{min-height:400px;background:transparent;}.main-img,.whatwedo-box img{margin-bottom:5rem;}.main-form,.whatwedo-box h4{margin-bottom:3rem;}.nav_item li a:hover,.whatwedo h2 span{color:#1abc9c;}
